add re-processing capabilities
